2008-04-26  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c term/win.trm (WIN_set_color):  Preserve setting of
	dash type and linewidth when a new color is selected.
	Allow dash types with linewidth > 1.
	Bug #1863361

2008-04-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_options):  "set term post ..." was losing options on
	the command line that appeared after "fontfile 'foo' ".
	Remove extraneous an c_token++.

	* src/graphics.c (plot_points) src/plot2d.c (get_data):  Allow the
	points in "with linespoints" to accept all the extra properties that
	"with points" already allows.  "pointsize variable" reads data from
	a 3rd column, "lc rgb variable" reads from a 3rd or 4th column.

	* docs/gnuplot.doc:  Wording changes suggested on newsgroup.

2008-04-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_encode_image PS_image):  If the palette size is
	limited by "set palette maxcolors" then we need to rescale [0:maxcolors]
	to [0:bitwidth] for the packed representation of the image in PostScript
	Bug #1869824

2008-04-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c:  Separate the status line from
	the plot canvas. XOR drawing is replaced by full overwrites.
	Status line no longer contains garbled text.
	Bug #1520692

	* config/config.nt: Disable many thousand compiler warnings from 
	Microsoft Visual Express C++ 2005.

2008-04-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise df_read_matrix): If missing or bad data is
	found in a matrix data file, print an int_warn() message, set the value
	to NaN if it isn't already, and return to the caller normally. 
	This allows one to leave holes in a matrix data file.

2008-04-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm:
	I have defined a new constant in wgnuplib.h WIN_PAL_COLORS.
	I don't know if the new value of 4096 is reasonable or not.
	Bug #1847768
